--- a/week4.ipynb
+++ b/week4.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyMc4P4mXkY3GN12Dd2od2ob",
+      "authorship_tag": "ABX9TyPjPWh76ML0TUsrOxDrH8y3",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -87,12 +87,12 @@
         "# Visualize the tree\n",
         "plt.figure(figsize=(12, 8))\n",
         "plot_tree(clf, feature_names=iris.feature_names, class_names=iris.target_names, filled=True)\n",
-        "plt.title(\"Decision Tree Visualization\")\n",
+        "plt.title(\"Decision Tree Visulization\")\n",
         "plt.show()\n",
         "\n",
         "# Feature importances\n",
         "feature_importances = pd.DataFrame(clf.feature_importances_, index=iris.feature_names, columns=[\"Importance\"])\n",
-        "print(\"Feature Importances:\")\n",
+        "print(\"Importance of the features:\")\n",
         "print(feature_importances)\n",
         "\n",
         "# Save the model\n",
